Bug 407118 - Keyboard navigation broken
Summary: Keyboard navigation broken
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: regression, usability
Depends on:
Blocks:
 
Reported: 2019-05-01 07:37 UTC by Christoph Feck
Modified: 2019-06-05 09:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2019-05-01 07:37:18 UTC
SUMMARY
Keyboard navigation is broken

STEPS TO REPRODUCE
1. Use "icon view" mode and navigate to "/usr/lib64/"
2. Use cursor Up/Down, PageUp/PageDown keys to navigate around
3. After a few up/down cycles Dolphin starts to act weird

OBSERVED RESULT
- You can actually move "above" the first row by using "Up" multiple times
- Pressing "PageDown" does not show scroll to the newly selected item
- Pressing "Down" at the bottom edge only scrolls down ever other time

EXPECTED RESULT
Sane and working navigation

SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 5.12.3
Dolphin Version: master @ ecf1ae6d0

ADDITIONAL INFORMATION
Someone also would need to investigate if the change made it into the 19.04 branch, because that's what we release next week.
Comment 1 Christoph Feck 2019-05-01 07:41:38 UTC
Forgot to say: same issues in "details view" mode, so reported as "general".
Comment 2 Christoph Feck 2019-05-21 18:29:25 UTC
Might be caused by b7db272af2f20fbeeea6bba33f4ef89d1d735bb9
Comment 3 trmdi 2019-06-05 09:41:30 UTC
Git commit 038565b62f6ca6323cae2c5a23a97d66fc3dc0cd by Tranter Madi.
Committed on 05/06/2019 at 09:40.
Pushed by trmdi into branch 'master'.

Scroll when pressing PageUp/PageDown

Summary:
Add `PageUp/PageDown` to the `navigationPressed` variable.
Remove the `m_view->firstVisibleIndex()` and `m_view->lastVisibleIndex()` tests because sometimes it does not work correctly.

Test Plan:
Press PageUp/PageDOwn: it scrolls
Press Up/DOwn: it always scrolls

Reviewers: #dolphin, Zren, cfeck, elvisangelaccio

Reviewed By: #dolphin, elvisangelaccio

Subscribers: elvisangelaccio, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D21573

M  +3    -4    src/kitemviews/kitemlistcontroller.cpp

https://commits.kde.org/dolphin/038565b62f6ca6323cae2c5a23a97d66fc3dc0cd