Scroll when pressing PageUp/PageDown

Summary:
Add `PageUp/PageDown` to the `navigationPressed` variable.
Remove the `m_view->firstVisibleIndex()` and `m_view->lastVisibleIndex()` tests because sometimes it does not work correctly.

BUG: 407118

Test Plan:
Press PageUp/PageDOwn: it scrolls
Press Up/DOwn: it always scrolls

Reviewers: #dolphin, Zren, cfeck, elvisangelaccio

Reviewed By: #dolphin, elvisangelaccio

Subscribers: elvisangelaccio, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D21573